カルーセルプッシュ！

--- a/index.html
+++ b/index.html
@@ -68,21 +68,14 @@
             <h2 class="Title-Section Title-center">カルーセル</h2>
             <div class="Carousel">
                 <ul class="Carousel-Wrapper">
-                    <li><img src="img/sample1.png" /></li>
-                    <li><img src="img/sample2.png" /></li>
-                    <li><img src="img/sample3.png" /></li>
-                    <li><img src="img/sample4.png" /></li>
-                    <li><img src="img/sample1.png" /></li>
-                    <li><img src="img/sample2.png" /></li>
-                    <li><img src="img/sample3.png" /></li>
-                    <li><img src="img/sample4.png" /></li>
-                    <li><img src="img/sample1.png" /></li>
-                    <li><img src="img/sample2.png" /></li>
-                    <li><img src="img/sample3.png" /></li>
-                    <li><img src="img/sample4.png" /></li>
+                    <li class="slide"><img src="img/sample1.png" /></li>
+                    <li class="slide"><img src="img/sample2.png" /></li>
+                    <li class="slide"><img src="img/sample3.png" /></li>
+                    <li class="slide"><img src="img/sample1.png" /></li>
+                    <li class="slide"><img src="img/sample1.png" /></li>
                 </ul>
-                <div class="Carousel-Prev Carousel-Hide"><i class="s s-arrow-left s-4x"></i></div>
-                <div class="Carousel-Next Carousel-Show"><i class="s s-arrow-right s-4x"></i></div>
+                <div class="Carousel-Button Carousel-Button-Prev"><i class="s s-arrow-left"></i></div>
+                <div class="Carousel-Button Carousel-Button-Next"><i class="s s-arrow-right"></i></div>
             </div>
     </section>
 
